# iot_data_saver_service

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yml
proto/: iot.proto
src/: config.rs  main.rs
src/bucket/: logic.rs
src/channels/: domain.rs
src/context/: domain.rs
src/database/: domain.rs  logic.rs  mod.rs  repository.rs
src/database/tables/: alert_air.rs  alert_temp.rs  measurement.rs  metrics.rs  mod.rs  monitor.rs  weather.rs
src/grpc_service/: logic.rs
src/heartbeat/: domain.rs  logic.rs  mod.rs
src/message/: domain.rs  logic.rs
src/system/: domain.rs
src/weather/: domain.rs  logic.rs
