[package]
name = "iot_data_saver_service"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros"] }
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tonic = { version = "0.12", features = ["tls", "tls-roots", "transport", "gzip"] }
prost = "0.13"
tokio-stream = "0.1.17"
chrono = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
dotenv = "0.15.0"

[build-dependencies]
tonic-build = "0.12"